WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191465
[css-grid] Dynamically setting "position: absolute" in a grid item doesn't trigger a relayout of that element
https://bugs.webkit.org/show_bug.cgi?id=191465
Summary
[css-grid] Dynamically setting "position: absolute" in a grid item doesn't tr...
Javier Fernandez
Reported
2018-11-09 05:05:13 PST
Created
attachment 354329
[details]
Test case to reproduce the issue Check the attached example, you shouldn't see red as the item gets absolute positioned and should take the whole size of the grid. Note that in the example, when "item" is marked as absolutely positioned, its containing block is "wrapper" and not the grid container. For some reason we're not triggering a new layout of the "item" in this situation.
Attachments
Test case to reproduce the issue
(500 bytes, text/html)
2018-11-09 05:05 PST
,
Javier Fernandez
no flags
Details
Patch
(4.16 KB, patch)
2018-11-09 05:21 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-sierra
(2.45 MB, application/zip)
2018-11-09 06:24 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-sierra-wk2
(2.99 MB, application/zip)
2018-11-09 06:34 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews113 for mac-sierra
(3.38 MB, application/zip)
2018-11-09 07:16 PST
,
EWS Watchlist
no flags
Details
Patch rebased
(4.29 KB, patch)
2020-06-01 14:07 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Rebased again
(4.11 KB, patch)
2020-06-02 07:34 PDT
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2018-11-09 05:21:22 PST
Created
attachment 354331
[details]
Patch
Manuel Rego Casasnovas
Comment 2
2018-11-09 06:07:57 PST
Comment on
attachment 354331
[details]
Patch r=me
EWS Watchlist
Comment 3
2018-11-09 06:24:02 PST
Comment on
attachment 354331
[details]
Patch
Attachment 354331
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9922961
New failing tests: imported/w3c/web-platform-tests/css/css-grid/abspos/grid-item-absolute-positioning-dynamic-001.html imported/w3c/web-platform-tests/css/css-grid/abspos/absolute-positioning-changing-containing-block-001.html
EWS Watchlist
Comment 4
2018-11-09 06:24:04 PST
Created
attachment 354333
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2018-11-09 06:34:15 PST
Comment on
attachment 354331
[details]
Patch
Attachment 354331
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9922975
New failing tests: imported/w3c/web-platform-tests/css/css-grid/abspos/grid-item-absolute-positioning-dynamic-001.html imported/w3c/web-platform-tests/css/css-grid/abspos/absolute-positioning-changing-containing-block-001.html
EWS Watchlist
Comment 6
2018-11-09 06:34:17 PST
Created
attachment 354335
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2018-11-09 07:16:56 PST
Comment on
attachment 354331
[details]
Patch
Attachment 354331
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9923108
New failing tests: imported/w3c/web-platform-tests/css/css-grid/abspos/grid-item-absolute-positioning-dynamic-001.html imported/w3c/web-platform-tests/css/css-grid/abspos/absolute-positioning-changing-containing-block-001.html
EWS Watchlist
Comment 8
2018-11-09 07:16:58 PST
Created
attachment 354340
[details]
Archive of layout-test-results from ews113 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-sierra Platform: Mac OS X 10.12.6
Manuel Rego Casasnovas
Comment 9
2019-11-28 05:09:42 PST
Mmmm, dunno why this patch never landed... we might want to review it again at some poing.
Oriol Brufau
Comment 10
2020-06-01 06:39:06 PDT
The patch seems fine, just needs a rebase.
Javier Fernandez
Comment 11
2020-06-01 14:07:36 PDT
Created
attachment 400757
[details]
Patch rebased
Manuel Rego Casasnovas
Comment 12
2020-06-02 04:40:55 PDT
(In reply to Javier Fernandez from
comment #11
)
> Created
attachment 400757
[details]
> Patch rebased
It seems the patch is not rebased yet.
Javier Fernandez
Comment 13
2020-06-02 07:34:43 PDT
Created
attachment 400820
[details]
Rebased again
Manuel Rego Casasnovas
Comment 14
2020-06-02 08:58:27 PDT
Comment on
attachment 400820
[details]
Rebased again r=me
EWS
Comment 15
2020-06-03 00:31:33 PDT
Committed
r262481
: <
https://trac.webkit.org/changeset/262481
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400820
[details]
.
Radar WebKit Bug Importer
Comment 16
2020-06-03 00:32:21 PDT
<
rdar://problem/63913363
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug