[css-grid] Dynamically setting "position: absolute" in a grid item doesn't trigger a relayout of that element https://bugs.webkit.org/show_bug.cgi?id=191465

Reviewed by Manuel Rego Casasnovas.

Source/WebCore:

From Blink r484620 by Sergio Villar <svillar@igalia.com>

Containing block overrides not cleared for position:absolute

Whenever a position:absolute block gets a new containing block the
previously set containing block overrides are not cleared. This causes the
block not to be properly layout for its new containing block (for example
when using relative sizes).

In particular this affects grid items which always get a containing block
override size (which represent the grid areas) in case their
containing block switches from the grid container to a grid ancestor.

No new tests, as this change is covered by current web platform tests.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::insertPositionedObject): Clear the containing block's override width and height.

LayoutTests:

Several tests pass now thanks to this change.

* TestExpectations: Removed failure expectations, since now these tests pass now.
  - absolute-positioning-changing-containing-block-001.html
  - grid-item-absolute-positioning-dynamic-001.html


Canonical link: https://commits.webkit.org/225508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262481 268f45cc-cd09-0410-ab3c-d52691b4dbfc